--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,13 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+/*Should add these as tailwind */
 /* Login Page CSS Start */
-* {
+/* * {
     box-sizing: border-box;
     font-family: -apple-system, BlinkMacSystemFont, "segoe ui", roboto, oxygen, ubuntu, cantarell, "fira sans", "droid sans", "helvetica neue", Arial, sans-serif;
     font-size: 16px;
-}
+} */
 
 .login {
     width: 400px;
@@ -53,11 +53,11 @@
 /* Login Page CSS End */
 
 /* Register Page CSS Start */
-* {
+/* * {
     box-sizing: border-box;
     font-family: -apple-system, BlinkMacSystemFont, "segoe ui", roboto, oxygen, ubuntu, cantarell, "fira sans", "droid sans", "helvetica neue", Arial, sans-serif;
     font-size: 16px;
-}
+} */
 
 .register {
     width: 400px;
