--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,11 +3,6 @@
 @tailwind utilities;
 /*Should add these as tailwind */
 /* Login Page CSS Start */
-/* * {
-    box-sizing: border-box;
-    font-family: -apple-system, BlinkMacSystemFont, "segoe ui", roboto, oxygen, ubuntu, cantarell, "fira sans", "droid sans", "helvetica neue", Arial, sans-serif;
-    font-size: 16px;
-} */
 .login {
     width: 400px;
     background-color: #ffffff;
@@ -52,12 +47,6 @@
 /* Login Page CSS End */
 
 /* Register Page CSS Start */
-/* * {
-    box-sizing: border-box;
-    font-family: -apple-system, BlinkMacSystemFont, "segoe ui", roboto, oxygen, ubuntu, cantarell, "fira sans", "droid sans", "helvetica neue", Arial, sans-serif;
-    font-size: 16px;
-} */
-
 .register {
     width: 400px;
     background-color: #ffffff;
@@ -77,14 +66,14 @@
     justify-content: center;
     padding-top: 20px;
 }
-.register input[type="password"], .register input[type="text"], .register input[type="email"] {
+.register form input[type="text"] {
     width: 310px;
     height: 50px;
     border: 1px solid #dee0e4;
     margin-bottom: 20px;
     padding: 0 15px;
 } 
-.register form input[type="submit"] {
+/* .register form input[type="submit"] {
     width: 100%;
     padding: 15px;
    margin-top: 20px;
@@ -94,7 +83,7 @@
     font-weight: bold;
     color: #ffffff;
     transition: background-color 0.2s;
-}
+} */
 #submitBtn {
     width: 100%;
     padding: 15px;
